# SquareConnectGenerator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
SquareConnectGenerator/: Board.cpp  Board.hpp  CMakeLists.txt  Filter.cpp  Filter.hpp  Generator.cpp  Generator.hpp  Main.cpp  Movement.cpp  Movement.hpp  Output.cpp  Output.hpp  Pos.cpp  Pos.hpp  Profiler.cpp  Profiler.hpp  Solver.cpp  Solver.hpp  Square.cpp  Square.hpp  Util.cpp  Util.hpp
SquareConnectGenerator/User/: UserFilter.hpp  UserFilter6.hpp  UserFilter7.hpp  UserFilter8.hpp
